Add OPAQUE login
